# Autonomus-Robot-System

./: README.md  setup.sh
puzzlebot_challenge/: package.xml
puzzlebot_gazebo/: package.xml  setup.cfg  setup.py
puzzlebot_gazebo/config/: gazebo.yaml
puzzlebot_gazebo/gazebo/: markers_world.sdf  simple_world.sdf  test_ground.sdf
puzzlebot_gazebo/gazebo/aruco000/: model.sdf
puzzlebot_gazebo/gazebo/aruco000/meshes/: aruco000.dae
puzzlebot_gazebo/gazebo/aruco001/: model.sdf
puzzlebot_gazebo/gazebo/aruco001/meshes/: aruco001.dae
puzzlebot_gazebo/gazebo/aruco002/: model.sdf
puzzlebot_gazebo/gazebo/aruco002/meshes/: aruco002.dae
puzzlebot_gazebo/gazebo/aruco003/: model.config  model.sdf
puzzlebot_gazebo/gazebo/aruco003/meshes/: aruco003.dae
puzzlebot_gazebo/gazebo/aruco004/: model.sdf
puzzlebot_gazebo/gazebo/aruco004/meshes/: aruco004.dae
puzzlebot_gazebo/gazebo/aruco005/: model.sdf
puzzlebot_gazebo/gazebo/aruco005/meshes/: aruco005.dae
puzzlebot_gazebo/gazebo/aruco006/: model.sdf
puzzlebot_gazebo/gazebo/aruco006/meshes/: aruco006.dae
puzzlebot_gazebo/gazebo/aruco007/: model.sdf
puzzlebot_gazebo/gazebo/aruco007/meshes/: aruco007.dae
puzzlebot_gazebo/gazebo/block/: model.config  model.sdf
puzzlebot_gazebo/gazebo/block/meshes/: block.dae
puzzlebot_gazebo/gazebo/puzzlebot/: model.config  model.sdf
puzzlebot_gazebo/gazebo/walls/: model.sdf
puzzlebot_gazebo/launch/: ignition.launch.py  puzzlebot_ignition.launch.py  puzzlebot_spawn.launch.py  ros_ign_bridge.launch.py
puzzlebot_gazebo/worlds/: test_ground.sdf
(+18 files in other folders)
