<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puzzlebot_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="josfrend17@gmail.com">alfredo</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS IGN -->
  <depend>gazebo_ros</depend>
  <depend>ros_ign_interfaces</depend>
  <depend>ros_ign_gazebo</depend>
  <depend>ros_ign_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <!-- <gazebo_ros plugin_path="${prefix}" /> -->
    <!-- <gazebo_ros gazebo_model_path="${prefix}/.." /> -->
  </export>
</package>
